--- a/client/src/styles/components/navbar.scss
+++ b/client/src/styles/components/navbar.scss
@@ -1,46 +1,31 @@
+@use "../abstracts/" as *;
+@use './connexion.scss';
+
+
 .navbar {
-    max-height: 90px;
-    background: rgb(224, 203, 203);
-    border-bottom: 1px solid rgb(183, 152, 152);
-    box-shadow: 0px 1px 1px #de1dde;
-    position: fixed;
-    top: 0;
-    right: 0;
-    left: 0;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding: 7px 37px;
+height: 118px;
+width: 100%;
+margin: 0 auto;
+background: $color-1;
 
-    .title {
-        font-size: 1.5em;
-        font-weight: bold;
-        color: rgb(104, 76, 198);
-        text-shadow: 1px 1px 1px #de1dde;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  padding-top: 32px ;
+  li {
+    margin: 0 16px;
+    a {
+      font-family: $font-1;
+      font-style: normal;
+      font-weight: 500;
+      font-size: 30px;
+      line-height: 37px;
+      /* identical to box height */
+      color: rgba(251, 251, 251, 0.92);
+
+      opacity: 0.3;
+      text-shadow: 2px 1px 2px rgba(245, 245, 238, 0.77);
     }
-    .navbar_menu {
-        display: flex;
-        max-width: 80vw;
-
-        .navbar_menu_list {
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            align-items: center;
-            
-            .navbar_menu_item {
-                list-style-type: none;
-                margin: 0 25px;
-
-                a {
-                    text-decoration: none;
-                    color: rgb(104, 76, 198);
-                    font-size: 1.2em;
-                    font-weight: bold;
-                    text-shadow: 1px 1px 1px #de1dde;
-                }
-            }
-        }
-    }
+  }
 }
