add banner on header page

--- a/client/src/styles/abstracts/_variables.scss
+++ b/client/src/styles/abstracts/_variables.scss
@@ -1,3 +1,4 @@
 $color-1: #4664CE;
 $color-2: #f1f1f1;
-$font-1: url('../../assets/fonts/Montserrat-Medium.ttf')
+$font-1: url('../../assets/fonts/Montserrat-Medium.ttf');
+$font-2: url('../../assets/fonts/Pattaya-Regular.ttf');
