--- a/client/src/styles/components/navbar.scss
+++ b/client/src/styles/components/navbar.scss
@@ -3,16 +3,19 @@
 
 
 .navbar {
+position: fixed;
 height: 118px;
 width: 100%;
 margin: 0 auto;
 background: $color-1;
+border-bottom: 2px solid $color-2;
 
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
   padding-top: 32px ;
+  z-index: 1;
   li {
     margin: 0 16px;
     a {
